cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/urldeb33fd2fa_friedemann_distripedia_tgz-pJ8-org_json_TestJ8.txt
../dataset/june2020_dataset_copy/urldeb33fd2fa_friedemann_distripedia_tgz-pJ8-org_json_TestJ8/src/wikipedia/utils/URLUtils.java:13: error: package sun.net.www.http is not visible
import sun.net.www.http.HttpClient;
                  ^
  (package sun.net.www.http is declared in module java.base, which does not export it)
../dataset/june2020_dataset_copy/urldeb33fd2fa_friedemann_distripedia_tgz-pJ8-org_json_TestJ8/src/trash/HttpServer.java:19: warning: [dep-ann] deprecated item is not annotated with @Deprecated
public class HttpServer implements Runnable
       ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
1 warning
